--- a/app/views/listings/search.html.erb
+++ b/app/views/listings/search.html.erb
@@ -1,4 +1,4 @@
-<% @listings.each do |l| %>
+<% @listing.each do |l| %>
 	<h3><%= l.title %></h3>
 	<p><%= l.description %></p>
 	<p><%= l.city %></p>
