--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,7 +1,14 @@
-<h3><%= @listing.title %></h3>
-<p><%= @listing.description %></p>
-<p><%= @listing.city %></p>
-<p><%= @listing.state %></p>
-<p><%= @listing.zipcode %></p>
+<div class="span4 well" style="text-align:center;background:white;border:white;">
+</div>
+<div class="span8 well" style="background:white;border:white;">
 
-<p> Posted <%= time_ago_in_words @listing.created_at %> ago </p>
+	<h3 style="text-align:center;"><%= @listing.title %></h3>
+	<p><%= @listing.description %></p>
+	<p><%= @listing.city %>, <%= @listing.state %></p>
+	<p><%= @listing.zipcode %></p>
+	<p> Posted <%= time_ago_in_words @listing.created_at %> ago </p>
+	
+</div>
+</div>
+<div class="span4 well" style="text-align:center;background:white;border:white;">
+</div>
