--- a/app/views/subcategories/show.html.erb
+++ b/app/views/subcategories/show.html.erb
@@ -1,15 +1,7 @@
-<div class="span4 well" style="text-align:center;background:white;border:white;">
-</div>
-<div class="span8 well" style="background:white;border:white;">
 
-			<h3 style="text-align:center;"><%= @category.name %></h3>
-			<h4 style="text-align:center;"><%= @subcategory.name %></h4>
+<h3 style="text-align:center;"><%= @category.name %> > <%= @subcategory.name %></h4>
 
-			<% @listings.each do |l| %>
-				<p><%= l.created_at %>: <%= link_to l.title, listing_path(l) %>: <%= l.city %>, <%= l.state %></p>
-			<% end %>
+<% @listings.each do |l| %>
+	<p><%= l.created_at %>: <%= link_to l.title, listing_path(l) %>: <%= l.city %>, <%= l.state %></p>
+<% end %>
 
-    </div>
-</div>
-<div class="span4 well" style="text-align:center;background:white;border:white;">
-</div>
