--- a/app/views/layouts/_body1.html.erb
+++ b/app/views/layouts/_body1.html.erb
@@ -5,7 +5,7 @@
     <%= link_to 'My Account', edit_user_registration_path %></br>
     <%= link_to 'Log Out', destroy_user_session_path, method: :delete %></br>
   <% else %>
-    <%= link_to 'Sign In', new_user_session_path %></br>
+    <%= link_to 'Log In', new_user_session_path %></br>
     <%= link_to 'Sign Up', new_user_registration_path %></br>
   <% end %>
 
