--- a/app/views/subcategories/show.html.erb
+++ b/app/views/subcategories/show.html.erb
@@ -1,5 +1,4 @@
-
-<h3 style="text-align:center;"><%= @category.name %> > <%= @subcategory.name %></h4>
+<h3 style="text-align:center;">gregslist > <%= @category.name %> > <%= @subcategory.name %></h4>
 
 <% @listings.each do |l| %>
 	<p><%= l.created_at %>: <%= link_to l.title, listing_path(l) %>: <%= l.city %>, <%= l.state %></p>
