--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,8 @@
-<div class="navbar navbar-inner navbar-fixed-bottom">
-<div class="container-fluid" style="text-align:center;">
-	<p>@gregslisting</p>
-</div>
+
+<div id="footer" class="navbar navbar-inner navbar-fixed-bottom">
+	<div class="container-fluid" style="text-align:center;">
+
+		<p>Copyright 2015 gregslisting</p>
+
+	</div>
 </div>
