--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,6 +23,15 @@
       <%= f.password_field :password_confirmation, autocomplete: "off" %>
     </div>
 
+
+
+    <div class="field">
+      current city<br />
+      <%= f.text_field :current_city, autofocus: true %>
+    </div>
+
+
+
     <div class="actions">
       <%= f.submit "Sign up" %>
     </div>
